--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </header>
     <section id="about">
         <div class="profile-info">
-            <img src="c:\Users\User\Downloads\117100693_2774656716193760_8544890163265076241_n.jpg" alt="A picture of me">
+            <img src="117100693_2774656716193760_8544890163265076241_n.jpg" alt="A picture of me">
             <div>
                 <h2>Hi, I'm John Bryan C. Luzano</h2>
                 <p>Welcome to my personal page! I'm a passionate student with a love for learning and exploring new ideas. I enjoy reading, writing, and diving into different subjects and am constantly seeking to learn new things. I believe in continuous growth and am excited to share my journey with you!</p>
